create card component and flex mixin

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <div class="container">
-     <section></section>
+     <section class="card"></section>
     </div>
   </body>
 </html>
