--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
 
   <body>
     <div class="container">
-     <section class="card"></section>
+     <section class="card">
+       <header>
+         <h1>Lorem ipsum</h1>
+         <h2>Lorem ipsum</h2>
+       </header>
+     </section>
     </div>
   </body>
 </html>
