add card top image

--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
 
   <body>
     <div class="container">
-     <section class="card">
-       <header>
-         <h1>Lorem ipsum</h1>
-         <h2>Lorem ipsum</h2>
-       </header>
-     </section>
+      <section class="card">
+        <div class="media"></div>
+        <div class="content">
+          <header class="header">
+            <h1>Lorem ipsum</h1>
+            <h2>Lorem ipsum</h2>
+          </header>
+          <div class="text">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa iusto molestiae repellendus ut magnam praesentium suscipit architecto, aspernatur similique earum quaerat qui eligendi omnis delectus autem rerum quod quas corrupti.</p>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
