add contact button to card

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
           <div class="text">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa iusto molestiae repellendus ut magnam praesentium suscipit architecto, aspernatur similique earum quaerat qui eligendi omnis delectus autem rerum quod quas corrupti.</p>
           </div>
+          <div class="actions">
+            <button>CONTACT</button>
+          </div>
         </div>
       </section>
     </div>
