add images and text

--- a/index.html
+++ b/index.html
@@ -23,11 +23,17 @@
         <div class="media"></div>
         <div class="content">
           <header class="header">
-            <h1>Lorem ipsum</h1>
-            <h2>Lorem ipsum</h2>
+            <h1>Susan Boyle</h1>
+            <h2>Singer lady</h2>
           </header>
           <div class="text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa iusto molestiae repellendus ut magnam praesentium suscipit architecto, aspernatur similique earum quaerat qui eligendi omnis delectus autem rerum quod quas corrupti.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa iusto molestiae repellendus ut magnam praesentium suscipit architecto, aspernatur similique earum quaerat.</p>
+            <h3>Skills</h3>
+            <ul>
+                <li>one</li>
+                <li>two</li>
+                <li>three</li>
+            </ul>      
           </div>
           <div class="actions">
             <button>CONTACT</button>
