--- a/index.html
+++ b/index.html
@@ -19,14 +19,21 @@
 
   <body>
     <div class="container">
+      <header class="header">
+        <nav class="menu">
+          <a class="menu-item" href="">Home</a>
+          <a class="menu-item" href="">Profile</a>
+          <a class="menu-item" href="">More info</a>
+        </nav>
+      </header>
       <section class="card">
-        <div class="media"></div>
-        <div class="content">
-          <header class="header">
+        <div class="card-media"></div>
+        <div class="card-content">
+          <header class="card-header">
             <h1>Susan Boyle</h1>
             <h2>Singer lady</h2>
           </header>
-          <div class="text">
+          <div class="card-text">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa iusto molestiae repellendus ut magnam praesentium suscipit architecto, aspernatur similique earum quaerat.</p>
             <h3>Skills</h3>
             <ul>
@@ -35,7 +42,7 @@
                 <li>three</li>
             </ul>      
           </div>
-          <div class="actions">
+          <div class="card-actions">
             <button>CONTACT</button>
           </div>
         </div>
