add text fields to contact page

--- a/contact.html
+++ b/contact.html
@@ -28,18 +28,22 @@
           <a class="menu-item active" href="">Contact</a>
         </nav>
       </header>
-      <section class="card">
+      <section class="card contact">
         <div class="card-media"></div>
         <div class="card-content">
           <header class="card-header">
-            <h1>Susan Boyle</h1>
-            <h2>Singer lady</h2>
+            <h1>Programming Lady</h1>
+            <h2>Coder</h2>
           </header>
           <div class="card-text">
             <form action="">
-              <div>
-                <input type="text" /> <input type="text" />
-                <input type="text" />
+              <div class="card-contact-form">
+                <label for="name">Name</label> 
+                <input id="name" type="text" />
+                <label for="email">Email</label>
+                <input id="email" type="text" />
+                <label for="additional-info">Additional info</label>
+                <input id="additional-info" type="text" />
               </div>
             </form>
           </div>
