--- a/index.html
+++ b/index.html
@@ -32,17 +32,14 @@
         <div class="card-media"></div>
         <div class="card-content">
           <header class="card-header">
-            <h1>Susan Boyle</h1>
-            <h2>Singer lady</h2>
+              <h1>Programming Lady</h1>
+              <h2>Coder</h2>
           </header>
           <div class="card-text">
             <div class="card-text-section">
               <h3>Info</h3>
               <p>
-                Susan Magdalane Boyle is a Scottish singer who came to
-                international attention when she appeared as a contestant on the
-                TV programme Britain's Got Talent, singing "I Dreamed a Dream"
-                from Les Misérables.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto temporibus eligendi harum ipsa ducimus labore sequi incidunt sit veniam inventore. Voluptas, odit esse recusandae necessitatibus accusantium dignissimos neque fugit blanditiis?
               </p>
             </div>
             <div class="card-text-section">
@@ -68,10 +65,7 @@
             <div class="card-text-section">
               <h3>Work History</h3>
               <p>
-                Susan Magdalane Boyle is a Scottish singer who came to
-                international attention when she appeared as a contestant on the
-                TV programme Britain's Got Talent, singing "I Dreamed a Dream"
-                from Les Misérables.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero necessitatibus corrupti architecto exercitationem, nisi iusto accusantium natus odit dolorum tempore placeat iure a pariatur laudantium suscipit nam! Optio, ipsa voluptates.
               </p>
             </div>
           </div>
