add media queries

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
               </div>
             </form>
           </div>
-          <div class="card-actions"><button>SEND</button></div>
+          <div class="card-actions contact"><button class="button">SEND</button></div>
         </div>
       </section>
     </div>
