--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
 
           <div class="card-actions">
-            <a href="contact.html"><button>CONTACT</button></a>
+            <a href="contact.html"><button class="button">CONTACT</button></a>
           </div>
         </div>
       </section>
