add placeholders to form

--- a/contact.html
+++ b/contact.html
@@ -39,11 +39,11 @@
             <form action="">
               <div class="card-contact-form">
                 <label for="name">Name</label> 
-                <input id="name" type="text" />
+                <input id="name" type="text" placeholder="Enter your name"/>
                 <label for="email">Email</label>
-                <input id="email" type="text" />
+                <input id="email" type="text" placeholder="Enter your email"/>
                 <label for="additional-info">Additional info</label>
-                <input id="additional-info" type="text" />
+                <input id="additional-info" type="text" placeholder="Anything else?"/>
               </div>
             </form>
           </div>
